--- a/code/11_dgf.Rmd
+++ b/code/11_dgf.Rmd
@@ -26,8 +26,58 @@ pacman::p_load(
 fyc <- readRDS(here::here("data_processed/fyc_processed.RDS"))
 ```  
 
+```{r get_coef}
+
+fn_emp_model <- function(){
+  # Part 1: Fit the logistic model for the probability of a non-zero outcome
+  model_part1 <- glm(
+    formula = ind_gt0 ~ ind_tx*ind_post + ind_tx + ind_post + ind_female + HISPANX + zPCS42 + INSCOV,
+    data = fyc,
+    family = binomial(link = "logit")
+  )
+  
+  # Part 2: Fit the Gamma model for the positive outcomes only
+  sim_positive <- fyc %>% filter(ind_gt0 == 1)
+  
+  model_part2 <- glm(
+    formula = TOTEXPYY ~ ind_tx*ind_post + ind_tx + ind_post+ ind_female + HISPANX + zPCS42 + INSCOV,
+    data = sim_positive,
+    family = Gamma(link = "log")
+  )
+  
+  list <- list(
+    model_part1 = model_part1,
+    model_part2 = model_part2
+  )
+  
+  return(list)
+  
+}
+  
+emp_model <- fn_emp_model()
+
+```  
 
 ```{r}
+# get coefficients 
+# Extract coefficients
+coef_part1 <- emp_model$model_part1$coefficients
+coef_part1
+
+# need below? maybe later when using stochastic compoents
+# sigma_part2 <- sigma(emp_model$model_part2) # residual Stddev (sigma) 6.733
+```
+
+```{r}
+coef_part2 <- emp_model$model_part2$coefficients
+coef_part2
+```
+
+
+```{r}
+# Updates:
+# -- 09/05 KW added INSCOV to models
+
 
 # ============================
 # Two-part DiD simulator (updated)
@@ -62,8 +112,9 @@ simulate_panel_data <- function(
   sigma_e = 0.3,            # residual SD for log(TOTEXPYY)
   rho = 0.8,                # pre/post corr for PCS42
   extreme_alloc = c("proportional","equal"), # spread scheme across cells (in expectation)
-  fill_zero_for_negative = TRUE,            # if TRUE, set TOTEXPYY=0 when ind_gt0==0
-  exact_positives = TRUE                     # if TRUE, hit 30% exactly (up to rounding)
+  fill_zero_for_negative = TRUE,    # if TRUE, set TOTEXPYY=0 when ind_gt0==0
+  exact_positives = TRUE,           # if TRUE, hit 30% exactly (up to rounding)
+  inject_extremes = TRUE
 ) {
   extreme_alloc <- match.arg(extreme_alloc)
 
@@ -77,12 +128,14 @@ simulate_panel_data <- function(
   ind_tx_i     <- rbinom(n, 1, p_treated)
   ind_female_i <- rbinom(n, 1, 0.5)
   HISPANX_i    <- rbinom(n, 1, 0.2)
-  INSCOV_i     <- sample(1:3, n, replace = TRUE)
+  INSCOV_i     <- rbinom(n, 1, 0.3)
+  # INSCOV_i     <- sample(1:3, n, replace = TRUE)
 
   ind_tx     <- rep(ind_tx_i, each = T)
   ind_female <- rep(ind_female_i, each = T)
   HISPANX    <- rep(HISPANX_i, each = T)
-  INSCOV     <- factor(rep(INSCOV_i, each = T))
+  INSCOV     <- rep(INSCOV_i, each=T)
+  #INSCOV     <- factor(rep(INSCOV_i, each = T))
 
   # ----- Time-varying PCS42 with pre/post correlation -----
   Sigma <- matrix(c(1, rho, rho, 1), 2, 2)
@@ -111,17 +164,24 @@ simulate_panel_data <- function(
   n_ext <- length(idx_ext)
   extreme_flag <- integer(N); extreme_flag[idx_ext] <- 1L
 
-  # ----- Part 1: Binary outcome (calibrate to ~30% overall with extremes forced positive) -----
+  # ----- Part 1: Binary outcome (calibrate to ~70% overall with extremes forced positive) -----
   # Linear predictor WITHOUT intercept on non-extreme rows
-  lp_cov <- 0.5*ind_post + 0.7*ind_tx + 0.2*ind_female - 0.2*HISPANX + 0.1*zPCS + u
+  # lp_cov <- 0.5*ind_post + 0.7*ind_tx + 0.2*ind_female - 0.2*HISPANX + 0.2*INSCOV + 0.1*zPCS + u
+    lp_cov <- coef_part1["(Intercept)"] +
+      coef_part1["ind_post"]*ind_post + 
+      coef_part1["ind_tx"]*ind_tx + 
+      coef_part1["ind_tx:ind_post"]*(ind_post*ind_tx) +
+      coef_part1["ind_female"]*ind_female +
+      coef_part1["HISPANX"]*HISPANX + 
+      coef_part1["zPCS42"]*zPCS + 
+      coef_part1["INSCOV"]*INSCOV
 
   # Because extremes are forced positive, adjust target on the remaining rows:
   s <- n_ext / N
   target_rest <- (target_prob - s) / (1 - s)
   eps <- 1e-6
   if (!is.finite(target_rest) || target_rest <= 0 || target_rest >= 1) {
-    warning(sprintf("prop_extreme=%.3f with target_prob=%.3f => target_rest=%.3f; clamping.",
-                    prop_extreme, target_prob, target_rest))
+    warning(sprintf("prop_extreme=%.3f with target_prob=%.3f => target_rest=%.3f; clamping.", prop_extreme, target_prob, target_rest))
     target_rest <- min(max(target_rest, eps), 1 - eps)
   }
 
@@ -154,8 +214,16 @@ simulate_panel_data <- function(
   }
 
   # ----- Part 2: Continuous outcome (on positives) -----
-  lp_cont <- 7 + 0.4*ind_post + 0.6*ind_tx + 0.15*zPCS + 
-             0.2*ind_female - 0.1*HISPANX + u
+  lp_cont <- 7 + 
+    coef_part2["ind_post"]*ind_post + 
+    coef_part2["ind_tx"]*ind_tx + 
+    coef_part2["ind_tx:ind_post"]*(ind_tx*ind_post) + 
+    coef_part2["ind_female"]*ind_female + 
+    coef_part2["HISPANX"]*HISPANX + 
+    coef_part2["zPCS42"]*zPCS + 
+    coef_part2["INSCOV"]
+  # lp_cont <- 7 + 0.4*ind_post + 0.6*ind_tx - 0.15*zPCS + 
+  #            0.2*ind_female + 0.1*HISPANX + 0.2*INSCOV + u
   eps_e <- rnorm(N, 0, sigma_e)
   log_TOT <- lp_cont + eps_e
 
@@ -165,8 +233,14 @@ simulate_panel_data <- function(
     TOTEXPYY <- ifelse(ind_gt0 == 1, exp(log_TOT), NA_real_)
   }
 
-  # Overwrite extremes with magnitude-specific heavy tail
-  if (n_ext > 0) {
+  # # Overwrite extremes with magnitude-specific heavy tail
+  # if (n_ext > 0) {
+  #   rng <- extreme_range(magnitude_level)
+  #   TOTEXPYY[idx_ext] <- rlogunif(n_ext, rng[1], rng[2])
+  # }
+  
+  # Inject extremes only if toggle is TRUE
+  if (inject_extremes && n_ext > 0) {
     rng <- extreme_range(magnitude_level)
     TOTEXPYY[idx_ext] <- rlogunif(n_ext, rng[1], rng[2])
   }
@@ -195,6 +269,31 @@ sim_conditions <- expand.grid(
 # Run all scenarios
 # ============================
 set.seed(20250811)
+all_sim_results_noExtreme <- vector("list", nrow(sim_conditions))
+
+for (i in seq_len(nrow(sim_conditions))) {
+  cond <- sim_conditions[i, ]
+  cat(sprintf("Sim %02d | n=%d, mag=%d, p_ext=%.02f\n",
+              i, cond$n, cond$magnitude_level, cond$prop_extreme))
+  sim_df <- simulate_panel_data(
+    n               = cond$n,
+    magnitude_level = cond$magnitude_level,
+    prop_extreme    = cond$prop_extreme,
+    p_treated       = 0.5,
+    target_prob     = 0.70,
+    extreme_alloc   = "proportional",  # or "equal"
+    fill_zero_for_negative = TRUE,
+    exact_positives = TRUE,
+    inject_extremes = FALSE
+  )
+  sim_df$sim_id <- i
+  sim_df$sample_size <- cond$n
+  all_sim_results_noExtreme[[i]] <- sim_df
+}
+
+final_sim_data_noExtreme <- bind_rows(all_sim_results_noExtreme)
+
+# WITH injected extreme values: 
 all_sim_results <- vector("list", nrow(sim_conditions))
 
 for (i in seq_len(nrow(sim_conditions))) {
@@ -209,7 +308,8 @@ for (i in seq_len(nrow(sim_conditions))) {
     target_prob     = 0.70,
     extreme_alloc   = "proportional",  # or "equal"
     fill_zero_for_negative = TRUE,
-    exact_positives = TRUE
+    exact_positives = TRUE,
+    inject_extremes = TRUE
   )
   sim_df$sim_id <- i
   sim_df$sample_size <- cond$n
@@ -217,11 +317,6 @@ for (i in seq_len(nrow(sim_conditions))) {
 }
 
 final_sim_data <- bind_rows(all_sim_results)
-
-## KW updating to make a binary for INSCOV 
-final_sim_data <- final_sim_data |> 
-  # 3 is not insured, 1 is any private, 2 is any commercial
-  mutate(ind_inscov = ifelse(INSCOV==3, 0, 1))
 
 # ============================
 # Quick checks
@@ -334,6 +429,11 @@ saveRDS(
   final_sim_data,
   here::here("data_processed/final_sim_data.RDS")
   )
+
+saveRDS(
+  final_sim_data_noExtreme,
+  here::here("data_processed/final_sim_data_noExtreme.RDS")
+)
 
 ```  
 
